добавила стиль в форму

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 </section>
 <div class="callback-form" id="callback-form">
     <div class="container">
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="col-xl-9 text-right close">X</div>
         </div>
     </div>
