--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
   </header>
   <section class="hero">
-    <img class="hero__img" src="img/bglaw.jpg" alt="Санкт-Петербург" />
+    <img class="hero__img bg_zoom" src="img/bglaw.jpg" alt="Санкт-Петербург">
     <div class="container">
       <div class="row">
         <div class="col-xl-12 ">
@@ -241,25 +241,10 @@
           </ul>
 
 
-<<<<<<< HEAD
-    <div class="col-xl-6 blue-block shadow-lg ">
-        <i class="fas fa-trophy"></i>
-       
-         <h3>Специальная оценка условий труда</h3>
-         <ul>  <li> <a href="#">Для всех рабочих мест<br> <sub>C 1 января 2019 г., на основании ст. 212 ТК РФ - обязательна. Мы оказываем полный комплекс услуг под «ключ».</sub></a>
-         </li></ul>
 
-     </div>
-     
-   
- </div>
- </div>
-</section>
-<div class="callback-form" id="callback-form">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-xl-9 text-right close">X</div>
-=======
+
+
+
 
         </div>
         <div class="col-xl-6 blue-block shadow-lg">
@@ -281,7 +266,7 @@
             <li> <a href="#">Внесение изменений в Устав, ЕГРЮЛ</a></li>
             <li> <a href="#">Ликвидация (ООО, ИП)</a></li>
           </ul>
->>>>>>> f81b935ff511ca59b2e5596e510e250b896c833f
+
         </div>
 
 
