добавила телефон и емейл в шапку

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       </div>
     </div>
     <div class="overlay">
+        <div class="contacts"><span><a href="#">Заказать звонок</a><br>+7 (812) 454-62-32<br>info@ucspb.ru</span></div>
       <div class="container-fluid border-bottom topmenu">
         <div class="row">
           <div class="col-xl-12">
@@ -130,11 +131,11 @@
     </div>
   </header>
   <section class="hero">
-    <img class="hero__img bg_zoom" src="img/bglaw.jpg" alt="Санкт-Петербург">
-    <div class="container">
+    <img class="hero__img bg_zoom" src="img/bglaw.jpg"  alt="Санкт-Петербург"> <!--srcset="img/bglaw-768.jpg 768w" sizes="(max-width: 768px) 500px"-->
+    <div class="container">        
       <div class="row">
         <div class="col-xl-12 ">
-          <h1 class="mt-5 mb-2">КОМПЛЕКС<br> БУХГАЛТЕРСКИХ И ЮРИДИЧЕСКИХ УСЛУГ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+          <h1>КОМПЛЕКС<br> БУХГАЛТЕРСКИХ И ЮРИДИЧЕСКИХ УСЛУГ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
           <img class="hero__blueline" src="img/blue-line.png" alt="голубая линия" />
           <button class="button btn_orderbig shadow-lg mt-5 mb-5 show_popup">заказать сейчас</button>
           <h2 class="hero__h2 mb-5 mt-5">ВАМИ ЗАНИМАЕТСЯ КОМАНДА ПРОФЕССИОНАЛОВ!<br>
@@ -229,7 +230,7 @@
 
     <div class="container grey-container">
       <div class="row justify-content-center ">
-        <div class="col-xl-6 blue-block shadow-lg ">
+        <div class="col-xl-6 blue-block shadow-lg">
 
           <i class="fas fa-trophy"></i>
           <h3>Юридические услуги</h3>
@@ -288,7 +289,7 @@
   </section>
   <div class="callback-form" id="callback-form">
     <div class="container">
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="col-xl-9 text-right close">X</div>
       </div>
     </div>
